# kyvern-atlas

./: .env.example  .gitignore  APP_SPEC.md  ARCHITECTURE.md  CLAUDE.md  COMPOSER_PROBLEM_BRIEF.md  COMPOSER_REFERENCE.md  CURRENT_STATE.md  DEMO_PLAN.md  DEMO_SCRIPT.md  DEMO_STRATEGY.md  DEMO_VIDEO_SCRIPT.md  DEPLOY.md  Demo Day Presentation Template.pptx  FRONTIER_PHASE_SCAFFOLDS.md  FRONTIER_PLAN.md  HACKATHON.md  IDEAS.md  KYVERN_ADVISOR_BRIEF.md  KYVERN_APP_TRANSFORMATION.md  KYVERN_BRIEF.md  KYVERN_DEVICE_SHELL_REDESIGN.md  KYVERN_FINAL_POLISH_REDESIGN.md  KYVERN_FRONTIER_FINAL_SPRINT.md  KYVERN_FRONTIER_GRAND_CHAMPION_SPEC.md  KYVERN_PRODUCT_STATE.md  KYVERN_RAW_REALITY.md  KYVERN_REBUILD.md  LAUNCH.md  LICENSE  PITCH_SCRIPT.md  README.md  RECORDING_SCRIPT.md  ROADMAP.md  SPEC_TO_WIN.md  STATE_OF_THE_PRODUCT.md  STATUS.md  SUBMISSION.md  SUBMISSION_AMPLIFICATION.md  SUBMISSION_CHECKLIST.md  (+10 more)
anchor/: Anchor.toml  README.md  package-lock.json  package.json
anchor/programs/kyvern-policy/: Cargo.toml
anchor/programs/kyvern-policy/src/: lib.rs
b-rolls/: Kyvern B-rolls.html  README.md  package.json  render.mjs
decks/: DEMO-DAY-CHECKLIST.md  PITCH-SCRIPT-TIGHT.md  REHEARSAL-SCRIPT.md  frontier.md  kast-pakistan.md  kyvern-pitch-deck.pptx
docs/: FRONTIER_SUBMISSION_DRAFT.md  POST_UNBOXING_AUDIT.md  WORKERS_DIAGNOSTIC.md
patches/: @sqds+multisig+2.1.4.patch
prompts/: KyvernLabs_Wave2_Build_Prompts.docx  advisory-prompt.md  demo-video-script.md  elsa-fellowship-application.md  launch-plan.md  launch-playbook.md  stellar-hacks-submission.md
public/: llms.txt  (+1 more)
(+573 files in other folders)
