[package]
name = "kyvern-policy"
version = "0.1.0"
description = "Kyvern on-chain policy program — extends Squads v4 spending limits with merchant allowlist, velocity cap, memo enforcement, and pause for AI-agent payments on Solana."
edition = "2021"
license = "MIT"
repository = "https://github.com/shariqazeem/kyvernlabs"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyvern_policy"

[features]
# When enabled this program registers the Anchor entrypoint.
# Disabled when another crate depends on this one as a library (for CPI types).
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

# Helpful idl-build flag for anchor build.
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
